# item-taskmanagement

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
data/: learning_config.yml  learning_libraries.txt  libs_info.xml
src/: CMakeLists.txt  CommonStartup.cpp  CommonStartup.hpp  Drive.cpp  DriveLog.cpp  Dummy.cpp  Dummy.hpp  Eo2Robot.cpp  Eo2Robot.hpp  Helper.cpp  Helper.hpp  Main.cpp
src/optimizer_env/: CMakeLists.txt  FollowerOptimizerEnvironment.cpp  FollowerOptimizerEnvironment.hpp  follower_environment.pc
src/states/: CMakeLists.txt  DummyState.cpp  DummyState.hpp  Forward.hpp  GenerateMap.cpp  GenerateMap.hpp  Init.cpp  Init.hpp  InitSimulation.cpp  InitSimulation.hpp
test/: CMakeLists.txt  test_Dummy.cpp
