add_subdirectory(states)
add_subdirectory(optimizer_env)

rock_library(common 
        CommonStartup.cpp
        Eo2Robot.cpp
    DEPS_PKGCONFIG
        state_machine
        state_machine_viz
)

rock_executable(Drive
    SOURCES 
        Drive.cpp
    HEADERS
    DEPS        
        states
        common
    DEPS_PKGCONFIG 
        state_machine
        state_machine_viz
)

rock_executable(DriveLog
    SOURCES 
        DriveLog.cpp
        optimizer_env/FollowerOptimizerEnvironment.cpp
    HEADERS
	optimizer_env/FollowerOptimizerEnvironment.hpp
    DEPS
        states
        common
    DEPS_PKGCONFIG 
        state_machine
        state_machine_viz
        bolero
        bl_loader
	lib_manager
	configmaps
)